--- a/WebContent/pages/参考_定义.html
+++ b/WebContent/pages/参考_定义.html
@@ -27,6 +27,8 @@
   <p class="bold">SID（System Identifier）</p>
   
   <p class="next"><span class="bold">数据库模式</span>定义为数据库对象的集合。模式的名称就是拥有或控制这些数据库对象集合的用户名称。</p>
-  <div class="ext">在 Oracle 数据库中，可以存在没有拥有任何数据对象的用户（不是模式），但是不会有没有命名的模式或数据库对象集合。</div>
+  <div class="ext">
+    <p>在 Oracle 数据库中，可以存在没有拥有任何数据对象的用户（不是模式），但是不会有没有命名的模式或数据库对象集合。</p>
+  </div>
 </body>
 </html>
